--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.2",
     "date-fns": "^2.23.0",
     "material-ui-pickers": "^2.2.4",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.12.1",
     "react-interaction": "^1.1.7",
@@ -52,5 +52,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "bootstrap": "^5.0.2",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
